Added module for ch12 in POM

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
     <module>ch08</module>
     <module>ch09</module>
     <module>ch11</module>
+    <module>ch12</module>
     <module>ch13</module>
     <module>hush</module>
   </modules>
