--- a/cluster/ansible/roles/common/tasks/main.yml
+++ b/cluster/ansible/roles/common/tasks/main.yml
@@ -9,18 +9,18 @@
 # ==== Stop firewall ====
 
 # RedHat <= 6
-#- name: Stop IP Tables
-#  service: name={{ item }} state=stopped enabled=no
-#  with_items:
-#    - iptables
-#  when: (ansible_os_family == 'RedHat' and ansible_distribution_major_version <= "6") or ansible_os_family == 'Debian'
+- name: Stop IP Tables
+  service: name={{ item }} state=stopped enabled=no
+  with_items:
+    - iptables
+  when: (ansible_os_family == 'RedHat' and ansible_distribution_major_version <= "6") or ansible_os_family == 'Debian'
 
 # RedHat > 6
-#- name: Stop Firewalld
-#  service: name={{ item }} state=stopped enabled=no
-#  with_items:
-#    - firewalld
-#  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version > "6"
+- name: Stop Firewalld
+  service: name={{ item }} state=stopped enabled=no
+  with_items:
+    - firewalld
+  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version > "6"
 
 # ==== Stop firewall ====
 
