--- a/cluster/ansible/playbooks/stop-hadoop-core.yml
+++ b/cluster/ansible/playbooks/stop-hadoop-core.yml
@@ -1,5 +1,5 @@
 ---
-# Sub playbook to stop all services on the relevant machines
+# Sub playbook to stop all Hadoop services on the relevant machines
 
 - hosts: master-1
   tasks:
@@ -9,11 +9,6 @@
     - name: Stop resourcemanager
       service: name=resourcemanager state=stopped
 
-- hosts: zookeepers
-  tasks:
-    - name: Stop zookeeper
-      service: name=zookeeper state=stopped
-
 - hosts: workers
   tasks:
     - name: Stop datanode
@@ -21,11 +16,3 @@
 
     - name: Stop nodemanager
       service: name=nodemanager state=stopped
-
-    - name: Stop HBase regionserver
-      service: name=hbase state=stopped
-
-- hosts: cluster
-  tasks:
-    - name: Stop HBase
-      service: name=hbase state=stopped
