--- a/cluster/ansible/roles/hbase-common/tasks/main.yml
+++ b/cluster/ansible/roles/hbase-common/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# Purpose: Install HBase
+# Purpose: Install common HBase components and configuration
 #
 # Notes:
 #   - Executed on all servers in the cluster
@@ -7,18 +7,18 @@
 - name: Create HBase related directories (secure mode)
   file: path={{ item.path }} owner={{ item.owner }} group=hadoop mode={{ item.mode }} recurse=yes state=directory
   with_items:
-    - { path: '{{ VAR_RUN_BASE }}/hbase/logs', owner: 'hbase', mode: 755 }
-    - { path: '{{ VAR_RUN_BASE }}/hbase/pid', owner: 'hbase', mode: 755 }
-    - { path: '{{ HBASE_CONFIG }}', owner: 'hbase', mode: 775 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].logs }}', owner: 'hbase', mode: 755 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].pid }}', owner: 'hbase', mode: 755 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].config }}', owner: 'hbase', mode: 775 }
     - { path: '{{ HBASE_TEMP_DIR }}', owner: 'hdfs', mode: 775 }
   when: SECURITY_ENABLED == true
 
 - name: Create HBase related directories (non-secure mode)
   file: path={{ item.path }} owner={{ item.owner }} group=hadoop mode={{ item.mode }} recurse=yes state=directory
   with_items:
-    - { path: '{{ VAR_RUN_BASE }}/hbase/logs', owner: 'hadoop', mode: 775 }
-    - { path: '{{ VAR_RUN_BASE }}/hbase/pid', owner: 'hadoop', mode: 775 }
-    - { path: '{{ HBASE_CONFIG }}', owner: 'hadoop', mode: 775 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].logs }}', owner: 'hadoop', mode: 775 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].pid }}', owner: 'hadoop', mode: 775 }
+    - { path: '{{ PATHS_BY_OWNER["hbase"].config }}', owner: 'hadoop', mode: 775 }
   when: SECURITY_ENABLED == false
 
 #- name: Download HBase to local machine
@@ -43,19 +43,12 @@
 - name: Put HBase configuration in place
   template: src={{ item.src }} dest={{ item.dest }} owner=hbase group=hadoop mode=0644
   with_items:
-    - { src: "etc/hbase/conf/regionservers.j2", dest: "{{ HBASE_CONFIG }}/regionservers" }
-    - { src: "etc/hbase/conf/backup-masters.j2", dest: "{{ HBASE_CONFIG }}/backup-masters" }
-    - { src: "etc/hbase/conf/hbase-env.sh.j2", dest: "{{ HBASE_CONFIG }}/hbase-env.sh" }
-    - { src: "etc/hbase/conf/hbase-site.xml.j2", dest: "{{ HBASE_CONFIG }}/hbase-site.xml" }
-    - { src: "etc/hbase/conf/hadoop-metrics2-hbase.properties.j2", dest: "{{ HBASE_CONFIG }}/hadoop-metrics2-hbase.properties" }
-    - { src: "etc/hbase/conf/hbase-policy.xml.j2", dest: "{{ HBASE_CONFIG }}/hbase-policy.xml" }
-    - { src: "etc/hbase/conf/hbase-jaas.conf.j2", dest: "{{ HBASE_CONFIG }}/hbase-jaas.conf" }
-
-# Also: hbase-policy.xml, log4j.properties, hadoop-metrics2-hbase.properties
-
-# Configure service script
-
-- name: Template HBase Master startup scripts
-  template: src={{ item.src }} dest=/etc/systemd/system/{{ item.dest }} owner=root group=root mode=755 backup=yes
-  with_items:
-    - { src: "etc/systemd/system/hbase.service.j2", dest: "hbase.service"}
+    - { src: 'etc/hbase/conf/regionservers.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/regionservers' }
+    - { src: 'etc/hbase/conf/backup-masters.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/backup-masters' }
+    - { src: 'etc/hbase/conf/hbase-env.sh.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/hbase-env.sh' }
+    - { src: 'etc/hbase/conf/hbase-site.xml.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/hbase-site.xml' }
+    - { src: 'etc/hbase/conf/hadoop-metrics2-hbase.properties.j2',
+        dest: '{{ PATHS_BY_OWNER["hbase"].config }}/hadoop-metrics2-hbase.properties' }
+    - { src: 'etc/hbase/conf/hbase-policy.xml.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/hbase-policy.xml' }
+    - { src: 'etc/hbase/conf/hbase-jaas.conf.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/hbase-jaas.conf' }
+    - { src: 'etc/hbase/conf/log4j.properties.j2', dest: '{{ PATHS_BY_OWNER["hbase"].config }}/log4j.properties' }
