--- a/cluster/ansible/roles/ssl-phase-1/tasks/main.yml
+++ b/cluster/ansible/roles/ssl-phase-1/tasks/main.yml
@@ -1,36 +1,40 @@
 ---
 # Purpose: Creates the TLS/SSL certificates needed
 #
-# Notes: 
-#   - Executed on every master and slave server 
+# Notes:
+#   - Executed on every master and worker server
 #   - This is part I of a three step process:
 #     Phase 1) Generate all certs, keystores, and CSRs for every server and process
 #     Phase 2) Sign all CSRs with the central CA root certificate
 #     Phase 3) Import all signed CSRs and put shared truststore in place
 
-- name: Create keystores (if not already present)
-  command: /usr/bin/keytool -genkeypair -keystore {{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.jks -keyalg RSA -alias {{ inventory_hostname }} -dname "CN={{ inventory_hostname }}" -storepass "{{ SSL_STORE_PASSWORD }}" -keypass "{{ SSL_KEY_PASSWORD }}" -validity 1000
-  args:
-    creates: "{{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.jks"
-  with_items: "{{ SSL_SERVICES }}"
+- name: Create keystore staging directory in root account (if not already present)
+  file:
+    path={{ KEYSTORE_STAGING_DIR }}
+    state=directory
+    owner=root
+    group=root
+    mode=750
 
-- name: Export CSRs (if not already present)
-  command: /usr/bin/keytool -certreq -keystore {{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.jks -alias {{ inventory_hostname }} -storepass "{{ SSL_STORE_PASSWORD }}" -keypass "{{ SSL_KEY_PASSWORD }}" -file {{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.csr
+- name: Create keystore (if not already present)
+  command: /usr/bin/keytool -genkeypair -keystore {{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.jks -keyalg RSA -alias {{ inventory_hostname }} -dname "CN={{ inventory_hostname }}" -storepass "{{ SSL_STORE_PASSWORD }}" -keypass "{{ SSL_KEY_PASSWORD }}" -validity 1000
   args:
-    creates: "{{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.csr"
-  with_items: "{{ SSL_SERVICES }}"
+    creates: "{{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.jks"
 
-- name: Set access rights for keystores and CSRs
-  file: 
-    path={{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item[0].owner }}.{{ item[1] }}
+- name: Export CSR (if not already present)
+  command: /usr/bin/keytool -certreq -keystore {{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.jks -alias {{ inventory_hostname }} -storepass "{{ SSL_STORE_PASSWORD }}" -keypass "{{ SSL_KEY_PASSWORD }}" -file {{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.csr
+  args:
+    creates: "{{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.csr"
+
+- name: Set access rights for keystore and CSR
+  file:
+    path={{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.{{ item }}
     state=file
-    owner={{ item[0].owner }}
+    owner=hadoop
     group=hadoop
     mode=440
-  with_nested: 
-    - "{{ SSL_SERVICES }}"
+  with_items:
     - [ 'jks', 'csr' ]
 
-- name: Fetch CSRs to KDC server (for signing in phase 2)
-  fetch: src={{ HADOOP_CONFIG }}/{{ inventory_hostname }}-{{ item.owner }}.csr dest=files/tmp/certs/ flat=yes
-  with_items: "{{ SSL_SERVICES }}"
+- name: Fetch CSR for later signing (in phase 2)
+  fetch: src={{ KEYSTORE_STAGING_DIR }}/{{ inventory_hostname }}.csr dest=files/tmp/certs/ flat=yes
